# OCR_DOCUMENT

./: README.md  example-4.py  example-5.py  example-6.py  example-7.py  example.txt  export-data.json  export-data2.json  export-data3.json  main.py  pyproject.toml
